# data-structures-lab

./: .coveragerc  .gitignore  .pylintrc  README.md  coverage.xml  pyproject.toml
documentation/: features.md  implementation_document.md  instructions.md  project-specification.md  testing_document.md  user_guide.md
documentation/course-docs/weekly_reports/: week2.md  week3.md  week4.md  week5.md  week6.md
documentation/weekly_reports/: week1.md  week4.md
src/: algorithm_call.py  app.py  dfs.py  disjointset.py  index.py  kruskals.py  maze.py  stage.py
src/tests/: dfs_test.py  disjointset_test.py  kruskals_test.py
src/ui/: grid.py  maze.py  menu.py
src/ui/buttons/: menu_btn.py  quit.py  start.py  submit.py
