[tool.poetry]
name = "data-structures-lab"
version = "0.1.0"
description = ""
authors = ["laurelcrelia <laurel.matt@helsinki.fi>"]
readme = "README.md"
packages = [{include = "data_structures_lab"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
